--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "start": "react-scripts start",
+    "prestart": "yarn build",
+    "start": "node server.js",
+    "start:dev": "react-scripts start",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -44,11 +46,13 @@
     "chart.js": "2.9.4",
     "date-fns": "^2.21.3",
     "ethers": "^5.1.4",
+    "express": "^4.17.1",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "node-fetch": "^2.6.1",
+    "path": "^0.12.7",
     "react": "^17.0.1",
     "react-chartjs-2": "2.11.1",
     "react-countup": "^4.3.3",
