feat: lottery add: api update: build directory

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "node server.js",
-    "start:dev": "react-scripts start",
+    "start:dev": "PORT=4000 react-scripts start",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -35,8 +35,8 @@
     "@types/react-dom": "^17.0.4",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.7",
-    "@wagyu-swap-libs/sdk": "^0.0.2",
-    "@wagyu-swap-libs/uikit": "^0.2.0",
+    "@wagyu-swap-libs/sdk": "^0.0.8",
+    "@wagyu-swap-libs/uikit": "^0.2.1",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.0",
